--- a/site/blueprints/tabs/template.yml
+++ b/site/blueprints/tabs/template.yml
@@ -6,6 +6,27 @@ fields:
   blocks:
     label: Offener Bereich
     type: blocks
+    fieldsets:
+      gallery: blocks/gallery
+      heading: blocks/heading
+      image: blocks/image
+      list: blocks/list
+      markdown: blocks/markdown
+      quote:
+        extends: blocks/quote
+        fields:
+          citation:
+            width: 2/3
+          role:
+            label: Rolle
+            type: select
+            width: 1/3
+            options:
+              composer: KomponistIn
+              educator: PädagogIn
+              student: SchülerIn
+      text: blocks/text
+      video: blocks/video
 
 sidebar:
   sidebar_fields:
